# ltc_to_midi

./: README  configure.ac
src/: LTC_reader.c  LTC_reader.h  Makefile.am  as_types.h  audio_buffer.h  audio_link.c  audio_link.h  audio_sink.c  audio_sink.h  audio_source.c  audio_source.h  gmarshal.list  ltc_to_midi.c  mtc_sender.c  mtc_sender.h  soundio.c  soundio.h  soundio_alsa.c  soundio_alsa.h  soundio_common.c  soundio_common.h  timecode_source.c  timecode_source.h  timeposition.h  userbits_source.c  userbits_source.h
